[home:scss]Fix txt vertical align in offres section

--- a/app/scss/offres/_offres.scss
+++ b/app/scss/offres/_offres.scss
@@ -18,9 +18,13 @@
 }
 .offres__text {
 	margin-left: 20px;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 .offres__text-left {
 	margin-right: 20px;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 .offres__icon{
 	width: 103px;
